# AtlasCare-Agent

./: .gitignore  README.md  architecture.md  convert_to_pdf.py  demo.py  generate_pdf.py  kpi_framework.md  main.py  pyproject.toml  requirements.txt  test_plan.md
agent/: __init__.py  graph.py  intent.py  orchestrator.py  planner.py  prompts.py  state.py
agent/nodes/: __init__.py  deterministic_executor.py  escalation_handler.py  policy_validation.py  regex_router.py  response_generator.py  structured_extraction.py  trace_finalizer.py  workflow_planner.py
data/: customers.json  knowledge_base.json  orders.json  payments_config.json
guardrails/: __init__.py  escalation.py  hallucination.py  refund_limit.py
models/: __init__.py  schemas.py
tests/: __init__.py  conftest.py  run_all_manual_tests.py  speed_test.py  test_custom_query.py  test_extended_journeys.py  test_graph_nodes.py  test_j1_tracking.py  test_j2_compound.py  test_j3_escalation.py  test_j4_policy.py  test_kb_queries.py  test_state_transitions.py
tools/: __init__.py  base.py  crm.py  kb.py  oms.py  payments.py  registry.py
utils/: __init__.py  llm_client.py  logger.py  pii.py  resilience.py  tracing.py
